# GTK-Tic-Tac-Toe

./: .gitmodules  CMakeLists.txt  README.md  game.c  game.h  main.c
